# resource-monitor

./: .gitignore  LICENSE  Project Structure.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: consts.rs  data_structures.rs  lib.rs  resource_monitor.rs
src-tauri/src/monitors/: cpu_monitor.rs  gpu_monitor.rs  memory_monitor.rs  mod.rs  system_monitor.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CpuInfo.tsx  GpuInfo.tsx  LineGraph.tsx  MemoryInfo.tsx  SystemInfo.tsx
src/util/: consts.ts  sleep.ts
src/util/interfaces/: CpuInfoInterface.ts  GpuInfoInterface.ts  LineGraphInterface.ts  MemoryInfoInterface.ts  SystemInfoInterface.ts
