# src-tauri/Cargo.toml
[package]
name = "resource-monitor"
version = "1.0.2"
description = "A simple Resource Monitor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] } # <--- Removed "os" feature here
tauri-plugin-log = "2"
sysinfo = "^0.30.5"
nvml-wrapper = "0.11.0"
tauri-plugin-window-state = "2.4.1"

[profile.release]
opt-level = 's'    # Optimize for binary size ('s' for size, 'z' for min size)
lto = true         # Enable Link Time Optimization
codegen-units = 1  # Reduce code generation units to 1 (can increase compile time but reduce size)
panic = 'abort'    # Abort on panic instead of unwinding (smaller binaries, but no stack trace on crash)
strip = true       # Strip debug symbols from the binary
