# src-tauri/Cargo.toml
[package]
name = "resource-monitor"
version = "1.0.3"
description = "A simple Resource Monitor"
authors = ["Matteo 'M4tt3o' Bosshard <https://m4tt3o.dev>"]
license = "GPL-3.0"
repository = "https://github.com/HardBoss07/resource-monitor"
edition = "2024"
rust-version = "1.93.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-log = "2.8.0"
sysinfo = "^0.30.5"
nvml-wrapper = "0.11.0"
tauri-plugin-window-state = "2.4.1"
tunjukin_suhu_cpu_windows = "0.1.0"
systemstat = "0.2.5"

[profile.release]
opt-level = 's'    # Optimize for binary size ('s' for size, 'z' for min size)
lto = true         # Enable Link Time Optimization
panic = 'abort'    # Abort on panic instead of unwinding (smaller binaries, but no stack trace on crash)
strip = true       # Strip debug symbols from the binary
